IC2 275 Compatibility and bug fixes
Nightvision goggles added
Alloy Glass fixed
item. and tile. prefixes removed

--- a/ic2/sprites/block_0.config
+++ b/ic2/sprites/block_0.config
@@ -1,37 +1,36 @@
 output=/mods/ic2/textures/blocks/
 
-1.1=#
 1.2=#
-1.13=tile.blockAlloyGlass
-1.14=tile.blockAlloy
-1.15=tile.blockDoorAlloy.top
-1.16=tile.blockDoorAlloy.bottom
+1.13=blockAlloy
+1.14=blockAlloyGlass
+1.15=blockDoorAlloy.top
+1.16=blockDoorAlloy.bottom
 
 2.1=#
-2.2=/machine/blockMachine
+2.2=machine/blockMachine
 2.13=#
-2.14=tile.blockBarrel.tap
-2.15=/wiring/tile.blockLuminator
-2.16=/wiring/tile.blockLuminatorDark
+2.14=blockBarrel.tap
+2.15=wiring/blockLuminator
+2.16=wiring/blockLuminatorDark
 
-3.1=tile.blockOreCopper
-3.2=tile.blockOreTin
-3.3=tile.blockOreUran
-3.4=/machine/tile.blockMiningPipe
-3.5=/machine/tile.blockMiningTip
-3.6=/cf/tile.blockFoam
-3.7=tile.blockRubSapling
-3.9=tile.blockRubber
+3.1=blockOreCopper
+3.2=blockOreTin
+3.3=blockOreUran
+3.4=machine/blockMiningPipe
+3.5=machine/blockMiningTip
+3.6=cf/blockFoam
+3.7=blockRubSapling
+3.9=blockRubber
 3.10=#
 3.11=#
-3.12=tile.blockHarz
+3.12=blockHarz
 3.13=#
 3.14=#
 3.15=#
 3.16=#
 
-4.9=tile.blockDynamiteRemote
-4.10=tile.blockDynamite
+4.9=blockDynamiteRemote
+4.10=blockDynamite
 4.11=#
 4.12=#
 4.13=#
@@ -47,22 +46,22 @@ output=/mods/ic2/textures/blocks/
 6.15=blockMetalTin
 6.16=#
 
-7.1=/cf/blockWall.black
-7.2=/cf/blockWall.red
-7.3=/cf/blockWall.green
-7.4=/cf/blockWall.brown
-7.5=/cf/blockWall.blue
-7.6=/cf/blockWall.purple
-7.7=/cf/blockWall.cyan
-7.8=/cf/blockWall.lightGray
-7.9=/cf/blockWall.gray
-7.10=/cf/blockWall.pink
-7.11=/cf/blockWall.lime
-7.12=/cf/blockWall.yellow
-7.13=/cf/blockWall.lightBlue
-7.14=/cf/blockWall.magenta
-7.15=/cf/blockWall.orange
-7.16=/cf/blockWall.white
+7.1=cf/blockWall.black
+7.2=cf/blockWall.red
+7.3=cf/blockWall.green
+7.4=cf/blockWall.brown
+7.5=cf/blockWall.blue
+7.6=cf/blockWall.purple
+7.7=cf/blockWall.cyan
+7.8=cf/blockWall.lightGray
+7.9=cf/blockWall.gray
+7.10=cf/blockWall.pink
+7.11=cf/blockWall.lime
+7.12=cf/blockWall.yellow
+7.13=cf/blockWall.lightBlue
+7.14=cf/blockWall.magenta
+7.15=cf/blockWall.orange
+7.16=cf/blockWall.white
 
 8.5=#
 8.6=#
