--- a/ic2/sprites/block_cable.config
+++ b/ic2/sprites/block_cable.config
@@ -1,131 +1,131 @@
 output=/mods/ic2/textures/blocks/wiring/cable/
 
-1.1=block.blockCable
-1.2=block.blockCable.red
-1.3=block.blockCable.green
-1.4=block.blockCable.brown
-1.5=block.blockCable.blue
-1.6=block.blockCable.purple
-1.7=block.blockCable.cyan
-1.8=block.blockCable.lightGray
-1.9=block.blockCable.gray
-1.10=block.blockCable.pink
-1.11=block.blockCable.lime
-1.12=block.blockCable.yellow
-1.13=block.blockCable.lightBlue
-1.14=block.blockCable.magenta
-1.15=block.blockCable.orange
-1.16=block.blockCable.white
+1.1=blockCable
+1.2=blockCable.red
+1.3=blockCable.green
+1.4=blockCable.brown
+1.5=blockCable.blue
+1.6=blockCable.purple
+1.7=blockCable.cyan
+1.8=blockCable.lightGray
+1.9=blockCable.gray
+1.10=blockCable.pink
+1.11=blockCable.lime
+1.12=blockCable.yellow
+1.13=blockCable.lightBlue
+1.14=blockCable.magenta
+1.15=blockCable.orange
+1.16=blockCable.white
 
-2.1=block.blockCableO
+2.1=blockCableO
 
-3.1=block.blockGoldCable
+3.1=blockGoldCable
 
-4.1=block.blockGoldCableI
-4.2=block.blockGoldCableI.red
-4.3=block.blockGoldCableI.green
-4.4=block.blockGoldCableI.brown
-4.5=block.blockGoldCableI.blue
-4.6=block.blockGoldCableI.purple
-4.7=block.blockGoldCableI.cyan
-4.8=block.blockGoldCableI.lightGray
-4.8=block.blockGoldCableI.gray
-4.10=block.blockGoldCableI.pink
-4.11=block.blockGoldCableI.lime
-4.12=block.blockGoldCableI.yellow
-4.13=block.blockGoldCableI.lightBlue
-4.14=block.blockGoldCableI.magenta
-4.15=block.blockGoldCableI.orange
-4.16=block.blockGoldCableI.white
+4.1=blockGoldCableI
+4.2=blockGoldCableI.red
+4.3=blockGoldCableI.green
+4.4=blockGoldCableI.brown
+4.5=blockGoldCableI.blue
+4.6=blockGoldCableI.purple
+4.7=blockGoldCableI.cyan
+4.8=blockGoldCableI.lightGray
+4.8=blockGoldCableI.gray
+4.10=blockGoldCableI.pink
+4.11=blockGoldCableI.lime
+4.12=blockGoldCableI.yellow
+4.13=blockGoldCableI.lightBlue
+4.14=blockGoldCableI.magenta
+4.15=blockGoldCableI.orange
+4.16=blockGoldCableI.white
 
-5.1=block.blockGoldCableII
-5.2=block.blockGoldCableII.red
-5.3=block.blockGoldCableII.green
-5.4=block.blockGoldCableII.brown
-5.5=block.blockGoldCableII.blue
-5.6=block.blockGoldCableII.purple
-5.7=block.blockGoldCableII.cyan
-5.8=block.blockGoldCableII.lightGray
-5.8=block.blockGoldCableII.gray
-5.10=block.blockGoldCableII.pink
-5.11=block.blockGoldCableII.lime
-5.12=block.blockGoldCableII.yellow
-5.13=block.blockGoldCableII.lightBlue
-5.14=block.blockGoldCableII.magenta
-5.15=block.blockGoldCableII.orange
-5.16=block.blockGoldCableII.white
+5.1=blockGoldCableII
+5.2=blockGoldCableII.red
+5.3=blockGoldCableII.green
+5.4=blockGoldCableII.brown
+5.5=blockGoldCableII.blue
+5.6=blockGoldCableII.purple
+5.7=blockGoldCableII.cyan
+5.8=blockGoldCableII.lightGray
+5.8=blockGoldCableII.gray
+5.10=blockGoldCableII.pink
+5.11=blockGoldCableII.lime
+5.12=blockGoldCableII.yellow
+5.13=blockGoldCableII.lightBlue
+5.14=blockGoldCableII.magenta
+5.15=blockGoldCableII.orange
+5.16=blockGoldCableII.white
 
-6.1=block.blockIronCable
+6.1=blockIronCable
 
-7.1=block.blockIronCableI
-7.2=block.blockIronCableI.red
-7.3=block.blockIronCableI.green
-7.4=block.blockIronCableI.brown
-7.5=block.blockIronCableI.blue
-7.6=block.blockIronCableI.purple
-7.7=block.blockIronCableI.cyan
-7.8=block.blockIronCableI.lightGray
-7.8=block.blockIronCableI.gray
-7.10=block.blockIronCableI.pink
-7.11=block.blockIronCableI.lime
-7.12=block.blockIronCableI.yellow
-7.13=block.blockIronCableI.lightBlue
-7.14=block.blockIronCableI.magenta
-7.15=block.blockIronCableI.orange
-7.16=block.blockIronCableI.white
+7.1=blockIronCableI
+7.2=blockIronCableI.red
+7.3=blockIronCableI.green
+7.4=blockIronCableI.brown
+7.5=blockIronCableI.blue
+7.6=blockIronCableI.purple
+7.7=blockIronCableI.cyan
+7.8=blockIronCableI.lightGray
+7.8=blockIronCableI.gray
+7.10=blockIronCableI.pink
+7.11=blockIronCableI.lime
+7.12=blockIronCableI.yellow
+7.13=blockIronCableI.lightBlue
+7.14=blockIronCableI.magenta
+7.15=blockIronCableI.orange
+7.16=blockIronCableI.white
 
-8.1=block.blockIronCableII
-8.2=block.blockIronCableII.red
-8.3=block.blockIronCableII.green
-8.4=block.blockIronCableII.brown
-8.5=block.blockIronCableII.blue
-8.6=block.blockIronCableII.purple
-8.7=block.blockIronCableII.cyan
-8.8=block.blockIronCableII.lightGray
-8.8=block.blockIronCableII.gray
-8.10=block.blockIronCableII.pink
-8.11=block.blockIronCableII.lime
-8.12=block.blockIronCableII.yellow
-8.13=block.blockIronCableII.lightBlue
-8.14=block.blockIronCableII.magenta
-8.15=block.blockIronCableII.orange
-8.16=block.blockIronCableII.white
+8.1=blockIronCableII
+8.2=blockIronCableII.red
+8.3=blockIronCableII.green
+8.4=blockIronCableII.brown
+8.5=blockIronCableII.blue
+8.6=blockIronCableII.purple
+8.7=blockIronCableII.cyan
+8.8=blockIronCableII.lightGray
+8.8=blockIronCableII.gray
+8.10=blockIronCableII.pink
+8.11=blockIronCableII.lime
+8.12=blockIronCableII.yellow
+8.13=blockIronCableII.lightBlue
+8.14=blockIronCableII.magenta
+8.15=blockIronCableII.orange
+8.16=blockIronCableII.white
 
-9.1=block.blockIronCableIII
-9.2=block.blockIronCableIII.red
-9.3=block.blockIronCableIII.green
-9.4=block.blockIronCableIII.brown
-9.5=block.blockIronCableIII.blue
-9.6=block.blockIronCableIII.purple
-9.7=block.blockIronCableIII.cyan
-9.8=block.blockIronCableIII.lightGray
-9.8=block.blockIronCableIII.gray
-9.10=block.blockIronCableIII.pink
-9.11=block.blockIronCableIII.lime
-9.12=block.blockIronCableIII.yellow
-9.13=block.blockIronCableIII.lightBlue
-9.14=block.blockIronCableIII.magenta
-9.15=block.blockIronCableIII.orange
-9.16=block.blockIronCableIII.white
+9.1=blockIronCableIII
+9.2=blockIronCableIII.red
+9.3=blockIronCableIII.green
+9.4=blockIronCableIII.brown
+9.5=blockIronCableIII.blue
+9.6=blockIronCableIII.purple
+9.7=blockIronCableIII.cyan
+9.8=blockIronCableIII.lightGray
+9.8=blockIronCableIII.gray
+9.10=blockIronCableIII.pink
+9.11=blockIronCableIII.lime
+9.12=blockIronCableIII.yellow
+9.13=blockIronCableIII.lightBlue
+9.14=blockIronCableIII.magenta
+9.15=blockIronCableIII.orange
+9.16=blockIronCableIII.white
 
-10.1=block.blockGlassCable
-10.2=block.blockGlassCable.red
-10.3=block.blockGlassCable.green
-10.4=block.blockGlassCable.brown
-10.5=block.blockGlassCable.blue
-10.6=block.blockGlassCable.purple
-10.7=block.blockGlassCable.cyan
-10.8=block.blockGlassCable.lightGray
-10.9=block.blockGlassCable.gray
-10.10=block.blockGlassCable.pink
-10.11=block.blockGlassCable.lime
-10.12=block.blockGlassCable.yellow
-10.13=block.blockGlassCable.lightBlue
-10.14=block.blockGlassCable.magenta
-10.15=block.blockGlassCable.orange
-10.16=block.blockGlassCable.white
+10.1=blockGlassCable
+10.2=blockGlassCable.red
+10.3=blockGlassCable.green
+10.4=blockGlassCable.brown
+10.5=blockGlassCable.blue
+10.6=blockGlassCable.purple
+10.7=blockGlassCable.cyan
+10.8=blockGlassCable.lightGray
+10.9=blockGlassCable.gray
+10.10=blockGlassCable.pink
+10.11=blockGlassCable.lime
+10.12=blockGlassCable.yellow
+10.13=blockGlassCable.lightBlue
+10.14=blockGlassCable.magenta
+10.15=blockGlassCable.orange
+10.16=blockGlassCable.white
 
-11.1=block.blockTinCable
+11.1=blockTinCable
 
 12.1=#
 12.2=#
