--- a/ic2/sprites/item_0.config
+++ b/ic2/sprites/item_0.config
@@ -1,228 +1,229 @@
 output=/mods/ic2/textures/items/
 
-1.1=item.itemDustCoal
-1.2=item.itemDustIron
-1.3=item.itemDustGold
-1.4=item.itemDustCopper
-1.5=item.itemDustTin
-1.6=item.itemDustBronze
-1.7=item.itemDustIronSmall
-1.8=item.itemIngotAdvIron
-1.9=item.itemIngotCopper
-1.10=item.itemIngotTin
-1.11=item.itemIngotBronze
-1.12=item.itemIngotAlloy
-1.13=item.itemIngotUran
-1.14=item.itemOreUran
-1.15=item.itemDustClay
+1.1=itemDustCoal
+1.2=itemDustIron
+1.3=itemDustGold
+1.4=itemDustCopper
+1.5=itemDustTin
+1.6=itemDustBronze
+1.7=itemDustIronSmall
+1.8=itemIngotAdvIron
+1.9=itemIngotCopper
+1.10=itemIngotTin
+1.11=itemIngotBronze
+1.12=itemIngotAlloy
+1.13=itemIngotUran
+1.14=itemOreUran
+1.15=itemDustClay
 1.16=item15
 
-2.1=item.itemBatRE.0
-2.2=item.itemBatRE.1
-2.3=item.itemBatRE.2
-2.4=item.itemBatRE.3
-2.5=item.itemBatRE.4
-2.6=item.itemBatCrystal.0
-2.7=item.itemBatCrystal.1
-2.8=item.itemBatCrystal.2
-2.9=item.itemBatCrystal.3
-2.10=item.itemBatCrystal.4
-2.11=item.itemBatLamaCrystal.0
-2.12=item.itemBatLamaCrystal.1
-2.13=item.itemBatLamaCrystal.2
-2.14=item.itemBatLamaCrystal.3
-2.15=item.itemBatLamaCrystal.4
-2.16=item.itemBatSU
+2.1=itemBatRE.0
+2.2=itemBatRE.1
+2.3=itemBatRE.2
+2.4=itemBatRE.3
+2.5=itemBatRE.4
+2.6=itemBatCrystal.0
+2.7=itemBatCrystal.1
+2.8=itemBatCrystal.2
+2.9=itemBatCrystal.3
+2.10=itemBatCrystal.4
+2.11=itemBatLamaCrystal.0
+2.12=itemBatLamaCrystal.1
+2.13=itemBatLamaCrystal.2
+2.14=itemBatLamaCrystal.3
+2.15=itemBatLamaCrystal.4
+2.16=itemBatSU
 
-3.1=item.itemCellEmpty
-3.2=item.itemCellLava
-3.3=item.itemCellCoal
-3.4=item.itemCellBio
+3.1=itemCellEmpty
+3.2=itemCellLava
+3.3=itemCellCoal
+3.4=itemCellBio
 3.5=item36
-3.6=item.itemCellWater
-3.7=item.reactorUraniumSimple
-3.8=item.itemCellHydrant
-3.9=item.reactorIsotopeCell
-3.10=item.itemCellUranEnriched
-3.11=item.itemCellUranEmpty
-3.12=item.itemCellWaterElectro
-3.13=item.itemPartPellet
-3.14=item.itemFoamSprayer
-3.15=item.itemArmorCFPack
-3.16=item.itemDebug
+3.6=itemCellWater
+3.7=reactorUraniumSimple
+3.8=itemCellHydrant
+3.9=reactorIsotopeCell
+3.10=itemCellUranEnriched
+3.11=itemCellUranEmpty
+3.12=itemCellWaterElectro
+3.13=itemPartPellet
+3.14=itemFoamSprayer
+3.15=itemArmorCFPack
+3.16=itemDebug
 
-4.1=item.itemToolDrill
-4.2=item.itemToolDDrill
-4.3=item.itemToolChainsaw
-4.4=item.itemFuelCanEmpty
-4.5=item.itemFuelCan
-4.6=item.itemFuelCoalDust
-4.7=item.itemFuelCoalCmpr
-4.8=item.itemFuelPlantBall
-4.9=item.itemFuelPlantCmpr
-4.10=item.itemTinCan
-4.11=item.itemTinCanFilled
-4.12=item.itemScanner
-4.13=item.itemScannerAdv
-4.14=item.itemRemote
-4.15=item.itemDynamite
-4.16=item.itemDynamiteSticky
+4.1=itemToolDrill
+4.2=itemToolDDrill
+4.3=itemToolChainsaw
+4.4=itemFuelCanEmpty
+4.5=itemFuelCan
+4.6=itemFuelCoalDust
+4.7=itemFuelCoalCmpr
+4.8=itemFuelPlantBall
+4.9=itemFuelPlantCmpr
+4.10=itemTinCan
+4.11=itemTinCanFilled
+4.12=itemScanner
+4.13=itemScannerAdv
+4.14=itemRemote
+4.15=itemDynamite
+4.16=itemDynamiteSticky
 
-5.1=item.itemHarz
-5.2=item.itemRubber
-5.3=item.itemTreetap
-5.4=item.itemArmorRubBoots
-5.5=item.itemArmorJetpack
-5.6=item.itemArmorJetpackElectric
-5.7=item.itemToolMiningLaser
-5.8=item.reactorPlating
-5.9=item.reactorVentDiamond
-5.10=item.itemArmorBatpack
-5.11=item.itemPartCarbonFibre
-5.12=item.itemPartCarbonMesh
-5.13=item.itemPartCarbonPlate
-5.14=item.itemNanoSaber.off
-5.15=item.itemNanoSaber.active
-5.16=item.itemNanoSaber.activeAlternate
+5.1=itemHarz
+5.2=itemRubber
+5.3=itemTreetap
+5.4=itemArmorRubBoots
+5.5=itemArmorJetpack
+5.6=itemArmorJetpackElectric
+5.7=itemToolMiningLaser
+5.8=reactorPlating
+5.9=reactorVentDiamond
+5.10=itemArmorBatpack
+5.11=itemPartCarbonFibre
+5.12=itemPartCarbonMesh
+5.13=itemPartCarbonPlate
+5.14=itemNanoSaber.off
+5.15=itemNanoSaber.active
+5.16=itemNanoSaber.activeAlternate
 
-6.1=item.itemToolBronzePickaxe
-6.2=item.itemToolBronzeAxe
-6.3=item.itemToolBronzeSword
-6.4=item.itemToolBronzeSpade
-6.5=item.itemToolBronzeHoe
-6.6=item.itemArmorBronzeHelmet
-6.7=item.itemArmorBronzeChestplate
-6.8=item.itemArmorBronzeLegs
-6.9=item.itemArmorBronzeBoots
-6.10=item.itemToolWrench
-6.11=item.itemToolMEter
-6.12=item.itemToolPainter
-6.13=item.itemToolCutter
-6.14=item.itemPartIridium
-6.15=item.itemToolWrenchElectric
-6.16=item.itemFreq
+6.1=itemToolBronzePickaxe
+6.2=itemToolBronzeAxe
+6.3=itemToolBronzeSword
+6.4=itemToolBronzeSpade
+6.5=itemToolBronzeHoe
+6.6=itemArmorBronzeHelmet
+6.7=itemArmorBronzeChestplate
+6.8=itemArmorBronzeLegs
+6.9=itemArmorBronzeBoots
+6.10=itemToolWrench
+6.11=itemToolMEter
+6.12=itemToolPainter
+6.13=itemToolCutter
+6.14=itemPartIridium
+6.15=itemToolWrenchElectric
+6.16=itemFreq
 
-7.1=item.itemPartCircuit
-7.2=item.itemPartCircuitAdv
-7.3=item.itemScrap
-7.4=item.itemMatter
-7.5=item.itemPartAlloy
-7.6=item.itemCoin
-7.7=item.itemDoorAlloy
-7.8=item.itemArmorAlloyChestplate
-7.9=item.itemArmorNanoHelmet
-7.10=item.itemArmorNanoChestplate
-7.11=item.itemArmorNanoLegs
-7.12=item.itemArmorNanoBoots
-7.13=item.itemArmorQuantumHelmet
-7.14=item.itemArmorQuantumChestplate
-7.15=item.itemArmorQuantumLegs
-7.16=item.itemArmorQuantumBoots
+7.1=itemPartCircuit
+7.2=itemPartCircuitAdv
+7.3=itemScrap
+7.4=itemMatter
+7.5=itemPartAlloy
+7.6=itemCoin
+7.7=itemDoorAlloy
+7.8=itemArmorAlloyChestplate
+7.9=itemArmorNanoHelmet
+7.10=itemArmorNanoChestplate
+7.11=itemArmorNanoLegs
+7.12=itemArmorNanoBoots
+7.13=itemArmorQuantumHelmet
+7.14=itemArmorQuantumChestplate
+7.15=itemArmorQuantumLegs
+7.16=itemArmorQuantumBoots
 
-8.1=item.itemCable
-8.2=item.itemCableO
-8.3=item.itemGoldCable
-8.4=item.itemGoldCableI
-8.5=item.itemGoldCableII
-8.6=item.itemIronCable
-8.7=item.itemIronCableI
-8.8=item.itemIronCableII
-8.9=item.itemIronCableIIII
-8.10=item.itemGlassCable
-8.11=item.itemTinCable
-8.12=item.itemDetectorCable
+8.1=itemCable
+8.2=itemCableO
+8.3=itemGoldCable
+8.4=itemGoldCableI
+8.5=itemGoldCableII
+8.6=itemIronCable
+8.7=itemIronCableI
+8.8=itemIronCableII
+8.9=itemIronCableIIII
+8.10=itemGlassCable
+8.11=itemTinCable
+8.12=itemDetectorCable
 8.13=#
 
-9.1=item.itemToolPainterBlack
-9.2=item.itemToolPainterRed
-9.3=item.itemToolPainterGreen
-9.4=item.itemToolPainterBrown
-9.5=item.itemToolPainterBlue
-9.6=item.itemToolPainterPurple
-9.7=item.itemToolPainterCyan
-9.8=item.itemToolPainterLightGrey
-9.9=item.itemToolPainterDarkGrey
-9.10=item.itemToolPainterPink
-9.11=item.itemToolPainterLime
-9.12=item.itemToolPainterYellow
-9.13=item.itemToolPainterCloud
-9.14=item.itemToolPainterMagenta
-9.15=item.itemToolPainterOrange
-9.16=item.itemToolPainterWhite
+9.1=itemToolPainterBlack
+9.2=itemToolPainterRed
+9.3=itemToolPainterGreen
+9.4=itemToolPainterBrown
+9.5=itemToolPainterBlue
+9.6=itemToolPainterPurple
+9.7=itemToolPainterCyan
+9.8=itemToolPainterLightGrey
+9.9=itemToolPainterDarkGrey
+9.10=itemToolPainterPink
+9.11=itemToolPainterLime
+9.12=itemToolPainterYellow
+9.13=itemToolPainterCloud
+9.14=itemToolPainterMagenta
+9.15=itemToolPainterOrange
+9.16=itemToolPainterWhite
 
-10.1=item.itemTFBP
-10.2=item.itemTFBPCultivation
-10.3=item.itemTFBPChilling
-10.4=item.itemTFBPIrrigation
-10.5=item.itemTFBPDesertification
-10.6=item.itemTFBPFlatification
-10.7=item.itemArmorLappack
-10.8=item.itemOreIridium
-10.9=item.itemCropSeed
-10.10=item.itemCropnalyzer
-10.11=item.itemToolHoe
-10.12=item.itemPartIndustrialDiamond
-10.13=item.itemPartCoalChunk
-10.14=item.itemPartCoalBlock
-10.15=item.itemPartCoalBall
-10.16=item.itemScrapbox
+10.1=itemTFBP
+10.2=itemTFBPCultivation
+10.3=itemTFBPChilling
+10.4=itemTFBPIrrigation
+10.5=itemTFBPDesertification
+10.6=itemTFBPFlatification
+10.7=itemArmorLappack
+10.8=itemOreIridium
+10.9=itemCropSeed
+10.10=itemCropnalyzer
+10.11=itemToolHoe
+10.12=itemPartIndustrialDiamond
+10.13=itemPartCoalChunk
+10.14=itemPartCoalBlock
+10.15=itemPartCoalBall
+10.16=itemScrapbox
 
-11.1=item.itemFertilizer
-11.2=item.itemTFBPMushroom
-11.3=item.itemToolbox.open
-11.4=item.itemToolbox
-11.5=item.itemSolarHelmet
-11.6=item.itemTreetapElectric
-11.7=item.itemTerraWart
-11.8=item.itemCofeeBeans
-11.9=item.itemCofeePowder
-11.10=item.itemMugEmpty
-11.11=item.itemMugCoffee_0
-11.12=item.itemMugCoffee_1
-11.13=item.itemMugCoffee_2
-11.14=item.itemBarrel
-11.15=item.itemHops
+11.1=itemFertilizer
+11.2=itemTFBPMushroom
+11.3=itemToolbox.open
+11.4=itemToolbox
+11.5=itemSolarHelmet
+11.6=itemTreetapElectric
+11.7=itemTerraWart
+11.8=itemCofeeBeans
+11.9=itemCofeePowder
+11.10=itemMugEmpty
+11.11=itemMugCoffee_0
+11.12=itemMugCoffee_1
+11.13=itemMugCoffee_2
+11.14=itemBarrel
+11.15=itemHops
 
-12.1=item.overclockerUpgrade
-12.2=item.transformerUpgrade
-12.3=item.energyStorageUpgrade
+12.1=overclockerUpgrade
+12.2=transformerUpgrade
+12.3=energyStorageUpgrade
 
-13.1=item.itemMugBooze.beer.Brew
-13.2=item.itemMugBooze.beer.Youngster
-13.3=item.itemMugBooze.beer.Beer
-13.4=item.itemMugBooze.beer.Ale
-13.5=item.itemMugBooze.beer.Dragonblood
-13.6=item.itemMugBooze.beer.Black Stuff
-13.7=item.itemGrinPowder
-13.8=item.itemWeedEx
-13.9=item.itemMugBooze.rum
+13.1=itemMugBooze.beer.Brew
+13.2=itemMugBooze.beer.Youngster
+13.3=itemMugBooze.beer.Beer
+13.4=itemMugBooze.beer.Ale
+13.5=itemMugBooze.beer.Dragonblood
+13.6=itemMugBooze.beer.Black Stuff
+13.7=itemGrinPowder
+13.8=itemWeedEx
+13.9=itemMugBooze.rum
 13.10=item201
-13.11=item.itemCoolant
+13.11=itemCoolant
 
-14.1=item.reactorUraniumDual
-14.2=item.reactorUraniumQuad
-14.3=item.reactorCoolantTriple
-14.4=item.reactorCoolantSix
-14.5=item.reactorPlatingHeat
-14.6=item.reactorPlatingExplosive
-14.7=item.reactorHeatSwitch
-14.8=item.reactorHeatSwitchCore
-14.9=item.reactorHeatSwitchSpread
-14.10=item.reactorHeatSwitchDiamond
-14.11=item.reactorVent
-14.12=item.reactorVentCore
-14.13=item.reactorVentGold
-14.14=item.reactorVentSpread
-14.15=item.reactorHeatpack
-14.16=item.reactorReflector
+14.1=reactorUraniumDual
+14.2=reactorUraniumQuad
+14.3=reactorCoolantTriple
+14.4=reactorCoolantSix
+14.5=reactorPlatingHeat
+14.6=reactorPlatingExplosive
+14.7=reactorHeatSwitch
+14.8=reactorHeatSwitchCore
+14.9=reactorHeatSwitchSpread
+14.10=reactorHeatSwitchDiamond
+14.11=reactorVent
+14.12=reactorVentCore
+14.13=reactorVentGold
+14.14=reactorVentSpread
+14.15=reactorHeatpack
+14.16=reactorReflector
 
-15.1=item.reactorReflectorThick
-15.2=item.reactorCondensator
-15.3=item.itemPartDCP
-15.4=item.reactorCondensatorLap
-15.5=item.itemArmorHazmatHelmet
-15.6=item.itemArmorHazmatChestplate
-15.7=item.itemArmorHazmatLeggings
-15.8=item.itemCellAir
+15.1=reactorReflectorThick
+15.2=reactorCondensator
+15.3=itemPartDCP
+15.4=reactorCondensatorLap
+15.5=itemArmorHazmatHelmet
+15.6=itemArmorHazmatChestplate
+15.7=itemArmorHazmatLeggings
+15.8=itemCellAir
+15.9=itemNightVisionGoggles
 
-16.1=item.itemDustSilver
+16.1=itemDustSilver
