Factorization Mac bug fix
Removed unneeded slashes

--- a/factorization/texture/blocks.config
+++ b/factorization/texture/blocks.config
@@ -80,5 +80,5 @@ output=/mods/factorization/textures/blocks/
 12.2=craft/packager_side
 12.3=craft/packager_side_on
 
-13.3=/ceramics/stand
-13.4=/ceramics/dry
+13.3=ceramics/stand
+13.4=ceramics/dry
