--- a/factorization/texture/items.config
+++ b/factorization/texture/items.config
@@ -62,4 +62,4 @@ output=/mods/factorization/textures/items/
 11.3=exo/mountedpiston
 11.4=exo/wall_jump_boots
 
-13.1=/rocket/inverium_drop
+13.1=rocket/inverium_drop
