--- a/extrabiomes/extrabiomes.config
+++ b/extrabiomes/extrabiomes.config
@@ -1,92 +1,92 @@
-output=/mods/ExtrabiomesXL/textures
+output=/mods/ExtrabiomesXL/textures/
  
-1.1=/blocks/crackedsand
-1.2=/blocks/quicksand
-1.3=/blocks/redrock
-1.4=/blocks/leavesbrownfancy
-1.5=/blocks/leavesbrownfast
-1.6=/blocks/leavesorangefancy
-1.7=/blocks/leavesorangefast
-1.8=/blocks/leavesredfancy
-1.9=/blocks/leavesredfast
-1.10=/blocks/leavesyellowfancy
-1.11=/blocks/leavesyellowfast
-1.12=/blocks/redrockbrick
-1.13=/blocks/redrockcobble
-1.14=/blocks/redrockslabside
-1.15=/blocks/redrockslabtop
+1.1=blocks/crackedsand
+1.2=blocks/quicksand
+1.3=blocks/redrock
+1.4=blocks/leavesbrownfancy
+1.5=blocks/leavesbrownfast
+1.6=blocks/leavesorangefancy
+1.7=blocks/leavesorangefast
+1.8=blocks/leavesredfancy
+1.9=blocks/leavesredfast
+1.10=blocks/leavesyellowfancy
+1.11=blocks/leavesyellowfast
+1.12=blocks/redrockbrick
+1.13=blocks/redrockcobble
+1.14=blocks/redrockslabside
+1.15=blocks/redrockslabtop
  
-2.1=/blocks/saplingbrown
-2.2=/blocks/saplingorange
-2.3=/blocks/saplingred
-2.4=/blocks/saplingyellow
-2.5=/blocks/saplingfir
-2.6=/blocks/saplingredwood
-2.7=/blocks/saplingacacia
+2.1=blocks/saplingbrown
+2.2=blocks/saplingorange
+2.3=blocks/saplingred
+2.4=blocks/saplingyellow
+2.5=blocks/saplingfir
+2.6=blocks/saplingredwood
+2.7=blocks/saplingacacia
 
-3.1=/blocks/autumnshrub
-3.2=/blocks/hydrangea
-3.3=/blocks/orangeflowers
-3.4=/blocks/purpleflowers
-3.5=/blocks/tinycactus
-3.6=/blocks/root
-3.7=/blocks/toadstools
-3.8=/blocks/whiteflowers
+3.1=blocks/autumnshrub
+3.2=blocks/hydrangea
+3.3=blocks/orangeflowers
+3.4=blocks/purpleflowers
+3.5=blocks/tinycactus
+3.6=blocks/root
+3.7=blocks/toadstools
+3.8=blocks/whiteflowers
  
-4.1=/blocks/browngrasstall
-4.2=/blocks/browngrassshort
-4.3=/blocks/deadgrassshort
-4.4=/blocks/deadgrasstall
-4.5=/blocks/deadgrassyellow
+4.1=blocks/browngrasstall
+4.2=blocks/browngrassshort
+4.3=blocks/deadgrassshort
+4.4=blocks/deadgrasstall
+4.5=blocks/deadgrassyellow
  
-5.1=/blocks/leafpile
-5.16=/blocks/cattail
+5.1=blocks/leafpile
+5.16=blocks/cattail
  
-6.1=/blocks/leavesfirfancy
-6.2=/blocks/leavesfirfast
-6.3=/blocks/leavesredwoodfancy
-6.4=/blocks/leavesredwoodfast
-6.5=/blocks/leavesacaciafancy
-6.6=/blocks/leavesacaciafast
-6.16=/items/cattail
+6.1=blocks/leavesfirfancy
+6.2=blocks/leavesfirfast
+6.3=blocks/leavesredwoodfancy
+6.4=blocks/leavesredwoodfast
+6.5=blocks/leavesacaciafancy
+6.6=blocks/leavesacaciafast
+6.16=items/cattail
 
-7.1=/items/scarecrow 
-7.2=/blocks/logredwoodside
-7.3=/blocks/logacaciaside
-7.16=/items/cactuspaste
+7.1=items/scarecrow 
+7.2=blocks/logredwoodside
+7.3=blocks/logacaciaside
+7.16=items/cactuspaste
  
-8.1=/items/logturner
-8.2=/blocks/logredwoodtop
-8.3=/blocks/logacaciatop
+8.1=items/logturner
+8.2=blocks/logredwoodtop
+8.3=blocks/logacaciatop
  
-9.1=/blocks/planksredwood
-9.2=/blocks/planksfir
-9.3=/blocks/planksacacia
+9.1=blocks/planksredwood
+9.2=blocks/planksfir
+9.3=blocks/planksacacia
  
-10.1=/blocks/logredwoodsideleft
-10.2=/blocks/logredwoodsideright
-10.3=/blocks/logfirsideleft
-10.4=/blocks/logfirsideright
-10.5=/blocks/logoaksideleft
-10.6=/blocks/logoaksideright
+10.1=blocks/logredwoodsideleft
+10.2=blocks/logredwoodsideright
+10.3=blocks/logfirsideleft
+10.4=blocks/logfirsideright
+10.5=blocks/logoaksideleft
+10.6=blocks/logoaksideright
  
-11.1=/blocks/redwoodtopleft
-11.2=/blocks/redwoodtopright
-11.3=/blocks/firtopleft
-11.4=/blocks/firtopright
-11.5=/blocks/oaktopleft
-11.6=/blocks/oaktopright
+11.1=blocks/redwoodtopleft
+11.2=blocks/redwoodtopright
+11.3=blocks/firtopleft
+11.4=blocks/firtopright
+11.5=blocks/oaktopleft
+11.6=blocks/oaktopright
 
-12.1=/blocks/redwoodbottomleft
-12.2=/blocks/redwoodbottomright
-12.3=/blocks/firbottomleft
-12.4=/blocks/firbottomright
-12.5=/blocks/oakbottomleft
-12.6=/blocks/oakbottomright
+12.1=blocks/redwoodbottomleft
+12.2=blocks/redwoodbottomright
+12.3=blocks/firbottomleft
+12.4=blocks/firbottomright
+12.5=blocks/oakbottomleft
+12.6=blocks/oakbottomright
  
-13.1=/blocks/redwoodsideleft
-13.2=/blocks/redwoodsideright
-13.3=/blocks/firsideleft
-13.4=/blocks/firsideright
-13.5=/blocks/oaksideleft
-13.6=/blocks/oaksideright
+13.1=blocks/redwoodsideleft
+13.2=blocks/redwoodsideright
+13.3=blocks/firsideleft
+13.4=blocks/firsideright
+13.5=blocks/oaksideleft
+13.6=blocks/oaksideright
