--- a/appeng/gfx/item.config
+++ b/appeng/gfx/item.config
@@ -1,6 +1,6 @@
 output=/mods/appeng/textures/items/
-1.1=Item1kcell
-1.2=Item16kcell
+1.1=Item1kCell
+1.2=Item16kCell
 1.3=Item64kCell
 1.4=MatBlankPattern
 1.5=ItemEncodedPattern
