4x hv insulated wire (Thanks Kaosian!)

--- a/ic2/sprites/block_cable.config
+++ b/ic2/sprites/block_cable.config
@@ -91,22 +91,22 @@ output=/mods/ic2/textures/blocks/wiring/cable/
 8.15=blockIronCableII.orange
 8.16=blockIronCableII.white
 
-9.1=blockIronCableIII
-9.2=blockIronCableIII.red
-9.3=blockIronCableIII.green
-9.4=blockIronCableIII.brown
-9.5=blockIronCableIII.blue
-9.6=blockIronCableIII.purple
-9.7=blockIronCableIII.cyan
-9.8=blockIronCableIII.lightGray
-9.8=blockIronCableIII.gray
-9.10=blockIronCableIII.pink
-9.11=blockIronCableIII.lime
-9.12=blockIronCableIII.yellow
-9.13=blockIronCableIII.lightBlue
-9.14=blockIronCableIII.magenta
-9.15=blockIronCableIII.orange
-9.16=blockIronCableIII.white
+9.1=blockIronCableIIII
+9.2=blockIronCableIIII.red
+9.3=blockIronCableIIII.green
+9.4=blockIronCableIIII.brown
+9.5=blockIronCableIIII.blue
+9.6=blockIronCableIIII.purple
+9.7=blockIronCableIIII.cyan
+9.8=blockIronCableIIII.lightGray
+9.8=blockIronCableIIII.gray
+9.10=blockIronCableIIII.pink
+9.11=blockIronCableIIII.lime
+9.12=blockIronCableIIII.yellow
+9.13=blockIronCableIIII.lightBlue
+9.14=blockIronCableIIII.magenta
+9.15=blockIronCableIIII.orange
+9.16=blockIronCableIIII.white
 
 10.1=blockGlassCable
 10.2=blockGlassCable.red
