Advanced Solars ingot typo

--- a/advsolar/texture/adv_items.config
+++ b/advsolar/texture/adv_items.config
@@ -10,7 +10,7 @@ output=/mods/advsolar/textures/items/
 1.8=ReinforcedIridiumIronPlate
 1.9=IrradiantReinforcedPlate
 1.10=SunnariumPart
-1.11=IridiumIgnot
+1.11=IridiumIngot
 1.12=AdvSolarHelmet
 1.13=HybridSolarHelmet
 1.14=UltimateSolarHelmet
