Minefactory Reloaded bricks

--- a/powercrystals/minefactoryreloaded/textures/terrain_0.config
+++ b/powercrystals/minefactoryreloaded/textures/terrain_0.config
@@ -67,3 +67,10 @@ output=/textures/blocks/powercrystals/minefactoryreloaded/
 4.14=tile.mfr.conveyor.stopped.green
 4.15=tile.mfr.conveyor.stopped.red
 4.16=tile.mfr.conveyor.stopped.black
+
+5.1=tile.mfr.decorativebrick.glowstone
+5.2=tile.mfr.decorativebrick.ice
+5.3=tile.mfr.decorativebrick.lapis
+5.4=tile.mfr.decorativebrick.obsidian
+5.5=tile.mfr.decorativebrick.pavedstone
+5.6=tile.mfr.decorativebrick.snow
