--- a/tdwp_ftw/biomesop/res/block.config
+++ b/tdwp_ftw/biomesop/res/block.config
@@ -37,19 +37,19 @@ output=/mods/BiomesOPlenty/textures/blocks/
 3.1=origingrass1
 3.2=origingrass2
 3.3=origingrass3
-3.4=cherrylog
-3.5=cherryplank
-3.6=darklog
-3.7=darkplank
-3.8=deadlog
-3.9=redwoodlog
-3.10=redwoodplank
-3.11=willowlog
-3.12=willowplank
-3.13=acacialog
-3.14=acaciaplank
-3.15=firlog
-3.16=firplank
+3.4=log_cherry_side
+3.5=plank_cherry
+3.6=log_dark_side
+3.7=plank_dark
+3.8=log_dead_side
+3.9=log_redwood_side
+3.10=plank_redwood
+3.11=log_willow_side
+3.12=plank_willow
+3.13=log_acacia_side
+3.14=plank_acacia
+3.15=log_fir
+3.16=plank_fir
 
 4.1=bigflowerstem
 4.2=bigflowerred
@@ -58,81 +58,68 @@ output=/mods/BiomesOPlenty/textures/blocks/
 4.5=mudbrick
 4.6=hardice
 4.7=pinkflower
-4.8=magiclog
-4.9=magicplank
+4.8=log_magic_side
+4.9=plank_magic
 4.10=treemoss
 4.11=barley
-4.12=palmlog
-4.13=palmplank
-4.14=mangrovelog
-4.15=mangroveplank
-4.16=acaciasapling
+4.12=log_palm_side
+4.13=plank_palm
+4.14=log_mangrove_side
+4.15=plank_mangrove
+4.16=sapling_acacia
 
-5.1=autumnleaves1
-5.2=autumnleaves2
-5.3=orangeleaves1
-5.4=orangeleaves2
-5.5=redleaves1
-5.6=redleaves2
-5.7=pinkleaves1
-5.8=pinkleaves2
-5.9=whiteleaves1
-5.10=whiteleaves2
-5.11=blueleaves1
-5.12=blueleaves2
-5.13=deadleaves1
-5.14=deadleaves2
-5.15=appleleaves1
-5.16=appleleaves2
+5.1=leaves_yellowautumn_fancy
+5.2=leaves_yellowautumn_fast
+5.3=leaves_orangeautumn_fancy
+5.4=leaves_orangeautumn_fast
+5.5=leaves_red_fancy
+5.6=leaves_red_fast
+5.7=leaves_pinkcherry_fancy
+5.8=leaves_pinkcherry_fast
+5.9=leaves_whitecherry_fancy
+5.10=leaves_whitecherry_fast
+5.11=leaves_magic_fancy
+5.12=leaves_magic_fast
+5.13=leaves_dead_fancy
+5.14=leaves_dead_fast
+5.15=leaves_apple
+5.16=leaves_apple3_fast
 
-6.1=appleleaves3
-6.1=willowleaves1
-6.2=appleleaves4
-6.2=willowleaves2
-6.3=originleaves1
-6.4=originleaves2
-6.5=darkleaves1
-6.6=darkleaves2
-6.7=firleaves1
-6.8=firleaves2
+6.1=leaves_apple0_fancy
+6.1=leaves_willow_fancy
+6.2=leaves_apple0_fast
+6.2=leaves_willow_fast
+6.3=leaves_origin_fancy
+6.4=leaves_origin_fast
+6.5=leaves_dark_fancy
+6.6=leaves_dark_fast
+6.7=leaves_fir_fancy
+6.8=leaves_fir_fast
 6.9=willowleaves3
 6.10=willowleaves4
-6.11=acacialeaves1
-6.12=acacialeaves2
-6.13=palmleaves1
-6.14=palmleaves2
-6.15=redwoodleaves1
-6.16=redwoodleaves2
+6.11=leaves_acacia_fancy
+6.12=leaves_acacia_fast
+6.13=leaves_palm_fancy
+6.14=leaves_palm_fast
+6.15=leaves_redwood_fancy
+6.16=leaves_redwood_fast
 
-7.1=bambooleaves1
-7.2=bambooleaves2
-7.3=firsapling
-7.3=firsappling
-7.4=redwoodsapling
-7.4=redwoodsappling
-7.5=palmsapling
-7.5=palmsappling
-7.6=redsapling
-7.6=redsappling
-7.7=orangesapling
-7.7=orangesappling
-7.8=yellowsapling
-7.8=yellowsappling
-7.9=brownsapling
-7.9=brownsappling
-7.10=willowsapling
-7.10=willowsappling
-7.11=applesapling
-7.12=originsapling
-7.12=originsappling
-7.13=pinksapling
-7.13=pinksappling
-7.14=whitesapling
-7.14=whitesappling
-7.15=darksapling
-7.15=darksappling
-7.16=magicsapling
-7.16=magicsappling
+7.1=leaves_bamboo_fancy
+7.2=leaves_bamboo_fast
+7.3=sapling_fir
+7.4=sapling_redwood
+7.5=sapling_palm
+7.6=sapling_red
+7.7=sapling_orangeautumn
+7.8=sapling_yellowautumn
+7.9=sapling_brown
+7.10=sapling_willow
+7.11=sapling_apple
+7.12=sapling_origin
+7.13=sapling_pinkcherry
+7.14=sapling_whitecherry
+7.15=sapling_dark
+7.16=sapling_magic
 
 8.1=deadbloom
 8.2=hydrangea
@@ -140,22 +127,20 @@ output=/mods/BiomesOPlenty/textures/blocks/
 8.4=mediumgrass
 8.5=dunegrass
 8.6=desertsprouts
-8.7=mangrovesapling
-8.7=mangrovesappling
-8.8=mangroveleaves1
-8.9=mangroveleaves2
+8.7=sapling_mangrove
+8.8=leaves_mangrove_fancy
+8.9=leaves_mangrove_fast
 8.10=algae
-8.11=smolderinggrass1
-8.12=smolderinggrass2
-8.13=smolderinggrass3
+8.11=smolderinggrass_top
+8.12=smolderinggrass_side
+8.13=smolderinggrass_bottom
 8.14=amethystore
-8.15=holyleaves1
-8.16=holyleaves2
+8.15=leaves_holy_fancy
+8.16=leaves_holy_fast
 
-9.1=holylog
-9.2=holyplank
-9.3=holysapling
-9.3=holysappling
+9.1=log_holy_side
+9.2=plank_holy
+9.3=sapling_holy
 9.4=amethystblock
 9.5=bamboothatching
 9.6=moss
