--- a/gregtechmod/textures/blocks.config
+++ b/gregtechmod/textures/blocks.config
@@ -1,59 +1,135 @@
-output=/mods/GregTech_Addon/textures/blocks/tile.BlockMetaID_Block/
+output=/mods/GregTech_Addon/textures/blocks/
 
-1.1=0
-1.2=1
-1.3=2
-1.4=3
-1.5=4
-1.6=5
-1.7=6
-1.8=7
-1.9=8
-1.10=9
-1.11=10
-1.12=11
-1.13=12
-1.14=13
-1.15=14
-1.16=15
+1.1=tile.BlockMetaID_Block/0
+1.2=tile.BlockMetaID_Block/1
+1.3=tile.BlockMetaID_Block/2
+1.4=tile.BlockMetaID_Block/3
+1.5=tile.BlockMetaID_Block/4
+1.6=tile.BlockMetaID_Block/5
+1.7=tile.BlockMetaID_Block/6
+1.8=tile.BlockMetaID_Block/7
+1.9=tile.BlockMetaID_Block/8
+1.10=tile.BlockMetaID_Block/9
+1.11=tile.BlockMetaID_Block/10
+1.12=tile.BlockMetaID_Block/11
+1.13=tile.BlockMetaID_Block/12
+1.14=tile.BlockMetaID_Block/13
+1.15=tile.BlockMetaID_Block/14
+1.16=tile.BlockMetaID_Block/15
 
+7.1=tile.BlockMetaID_Block/16
+7.2=tile.BlockMetaID_Block/17
+7.3=tile.BlockMetaID_Block/18
+7.4=tile.BlockMetaID_Block/19
+7.5=tile.BlockMetaID_Block/20
+7.6=tile.BlockMetaID_Block/21
+7.7=tile.BlockMetaID_Block/22
+7.8=tile.BlockMetaID_Block/23
+7.9=tile.BlockMetaID_Block/24
+7.10=tile.BlockMetaID_Block/25
+7.11=tile.BlockMetaID_Block/26
+7.12=tile.BlockMetaID_Block/27
 
-7.1=16
-7.2=17
-7.3=18
-7.4=19
-7.5=20
-7.6=21
-7.7=22
-7.8=23
-7.9=24
-7.10=25
-7.11=26
-7.12=27
+8.1=tile.BlockMetaID_Block/28
+8.2=tile.BlockMetaID_Block/29
+8.3=tile.BlockMetaID_Block/30
+8.4=tile.BlockMetaID_Block/31
+8.5=tile.BlockMetaID_Block/32
+8.6=tile.BlockMetaID_Block/33
+8.7=tile.BlockMetaID_Block/34
+8.8=tile.BlockMetaID_Block/35
+8.9=tile.BlockMetaID_Block/36
+8.10=tile.BlockMetaID_Block/37
+8.11=tile.BlockMetaID_Block/38
+8.12=tile.BlockMetaID_Block/39
 
+9.2=tile.Ore_End/6
+9.3=tile.Ore_End/12
+9.4=tile.Ore_End/18
+9.5=tile.Ore_End/24
+9.6=tile.Ore_End/30
+9.7=tile.Ore_End/36
+9.8=tile.Ore_End/42
+9.9=tile.Ore_End/48
+9.10=tile.Ore_End/54
+9.11=tile.Ore_End/60
+9.12=tile.Ore_End/66
+9.13=tile.Ore_End/72
 
-8.1=28
-8.2=29
-8.3=30
-8.4=31
-8.5=32
-8.6=33
-8.7=34
-8.8=35
-8.9=36
-8.10=37
-8.11=38
-8.12=39
+9.2=tile.Ore_Nether/6
+9.3=tile.Ore_Nether/12
+9.4=tile.Ore_Nether/18
+9.5=tile.Ore_Nether/24
+9.6=tile.Ore_Nether/30
+9.7=tile.Ore_Nether/36
+9.8=tile.Ore_Nether/42
+9.9=tile.Ore_Nether/48
+9.10=tile.Ore_Nether/54
+9.11=tile.Ore_Nether/60
+9.12=tile.Ore_Nether/66
+9.13=tile.Ore_Nether/72
 
-15.1=40
-15.2=41
-15.3=42
-15.4=43
-15.5=44
-15.6=45
-15.7=46
-15.8=47
-15.9=48
-15.10=49
-15.11=50
-15.12=51
+9.2=tile.Ore_Stone/6
+9.3=tile.Ore_Stone/12
+9.4=tile.Ore_Stone/18
+9.5=tile.Ore_Stone/24
+9.6=tile.Ore_Stone/30
+9.7=tile.Ore_Stone/36
+9.8=tile.Ore_Stone/42
+9.9=tile.Ore_Stone/48
+9.10=tile.Ore_Stone/54
+9.11=tile.Ore_Stone/60
+9.12=tile.Ore_Stone/66
+9.13=tile.Ore_Stone/72
+
+10.2=tile.Ore_End/7
+10.3=tile.Ore_End/13
+10.4=tile.Ore_End/19
+10.5=tile.Ore_End/25
+10.6=tile.Ore_End/31
+10.7=tile.Ore_End/37
+10.8=tile.Ore_End/43
+10.9=tile.Ore_End/49
+10.10=tile.Ore_End/55
+10.11=tile.Ore_End/61
+10.12=tile.Ore_End/67
+10.13=tile.Ore_End/73
+
+10.2=tile.Ore_Nether/7
+10.3=tile.Ore_Nether/13
+10.4=tile.Ore_Nether/19
+10.5=tile.Ore_Nether/25
+10.6=tile.Ore_Nether/31
+10.7=tile.Ore_Nether/37
+10.8=tile.Ore_Nether/44
+10.9=tile.Ore_Nether/49
+10.10=tile.Ore_Nether/55
+10.11=tile.Ore_Nether/61
+10.12=tile.Ore_Nether/67
+10.13=tile.Ore_Nether/73
+
+10.2=tile.Ore_Stone/6
+10.3=tile.Ore_Stone/12
+10.4=tile.Ore_Stone/18
+10.5=tile.Ore_Stone/24
+10.6=tile.Ore_Stone/30
+10.7=tile.Ore_Stone/36
+10.8=tile.Ore_Stone/42
+10.9=tile.Ore_Stone/48
+10.10=tile.Ore_Stone/54
+10.11=tile.Ore_Stone/60
+10.12=tile.Ore_Stone/66
+10.13=tile.Ore_Stone/72
+
+15.1=tile.BlockMetaID_Block/40
+15.2=tile.BlockMetaID_Block/41
+15.3=tile.BlockMetaID_Block/42
+15.4=tile.BlockMetaID_Block/43
+15.5=tile.BlockMetaID_Block/44
+15.6=tile.BlockMetaID_Block/45
+15.7=tile.BlockMetaID_Block/46
+15.8=tile.BlockMetaID_Block/47
+15.9=tile.BlockMetaID_Block/48
+15.10=tile.BlockMetaID_Block/49
+15.11=tile.BlockMetaID_Block/50
+15.12=tile.BlockMetaID_Block/51
