--- a/gregtechmod/textures/blocks.config
+++ b/gregtechmod/textures/blocks.config
@@ -108,18 +108,174 @@ output=/mods/GregTech_Addon/textures/blocks/
 10.12=tile.Ore_Nether/67
 10.13=tile.Ore_Nether/73
 
-10.2=tile.Ore_Stone/6
-10.3=tile.Ore_Stone/12
-10.4=tile.Ore_Stone/18
-10.5=tile.Ore_Stone/24
-10.6=tile.Ore_Stone/30
-10.7=tile.Ore_Stone/36
-10.8=tile.Ore_Stone/42
-10.9=tile.Ore_Stone/48
-10.10=tile.Ore_Stone/54
-10.11=tile.Ore_Stone/60
-10.12=tile.Ore_Stone/66
-10.13=tile.Ore_Stone/72
+10.2=tile.Ore_Stone/7
+10.3=tile.Ore_Stone/13
+10.4=tile.Ore_Stone/19
+10.5=tile.Ore_Stone/25
+10.6=tile.Ore_Stone/31
+10.7=tile.Ore_Stone/37
+10.8=tile.Ore_Stone/43
+10.9=tile.Ore_Stone/49
+10.10=tile.Ore_Stone/55
+10.11=tile.Ore_Stone/61
+10.12=tile.Ore_Stone/67
+10.13=tile.Ore_Stone/73
+
+11.2=tile.Ore_End/8
+11.3=tile.Ore_End/14
+11.4=tile.Ore_End/20
+11.5=tile.Ore_End/26
+11.6=tile.Ore_End/32
+11.7=tile.Ore_End/38
+11.8=tile.Ore_End/44
+11.9=tile.Ore_End/50
+11.10=tile.Ore_End/56
+11.11=tile.Ore_End/62
+11.12=tile.Ore_End/68
+11.13=tile.Ore_End/74
+
+11.2=tile.Ore_Nether/8
+11.3=tile.Ore_Nether/14
+11.4=tile.Ore_Nether/20
+11.5=tile.Ore_Nether/26
+11.6=tile.Ore_Nether/32
+11.7=tile.Ore_Nether/38
+11.8=tile.Ore_Nether/45
+11.9=tile.Ore_Nether/50
+11.10=tile.Ore_Nether/56
+11.11=tile.Ore_Nether/62
+11.12=tile.Ore_Nether/68
+11.13=tile.Ore_Nether/74
+
+11.2=tile.Ore_Stone/8
+11.3=tile.Ore_Stone/14
+11.4=tile.Ore_Stone/20
+11.5=tile.Ore_Stone/26
+11.6=tile.Ore_Stone/32
+11.7=tile.Ore_Stone/38
+11.8=tile.Ore_Stone/44
+11.9=tile.Ore_Stone/50
+11.10=tile.Ore_Stone/56
+11.11=tile.Ore_Stone/62
+11.12=tile.Ore_Stone/68
+11.13=tile.Ore_Stone/74
+
+12.2=tile.Ore_End/9
+12.3=tile.Ore_End/15
+12.4=tile.Ore_End/21
+12.5=tile.Ore_End/27
+12.6=tile.Ore_End/33
+12.7=tile.Ore_End/39
+12.8=tile.Ore_End/45
+12.9=tile.Ore_End/51
+12.10=tile.Ore_End/57
+12.11=tile.Ore_End/63
+12.12=tile.Ore_End/69
+12.13=tile.Ore_End/75
+
+12.2=tile.Ore_Nether/9
+12.3=tile.Ore_Nether/15
+12.4=tile.Ore_Nether/21
+12.5=tile.Ore_Nether/27
+12.6=tile.Ore_Nether/33
+12.7=tile.Ore_Nether/39
+12.8=tile.Ore_Nether/45
+12.9=tile.Ore_Nether/51
+12.10=tile.Ore_Nether/57
+12.11=tile.Ore_Nether/63
+12.12=tile.Ore_Nether/69
+12.13=tile.Ore_Nether/75
+
+12.2=tile.Ore_Stone/9
+12.3=tile.Ore_Stone/15
+12.4=tile.Ore_Stone/21
+12.5=tile.Ore_Stone/27
+12.6=tile.Ore_Stone/33
+12.7=tile.Ore_Stone/39
+12.8=tile.Ore_Stone/45
+12.9=tile.Ore_Stone/51
+12.10=tile.Ore_Stone/57
+12.11=tile.Ore_Stone/63
+12.12=tile.Ore_Stone/69
+12.13=tile.Ore_Stone/75
+
+13.2=tile.Ore_End/10
+13.3=tile.Ore_End/16
+13.4=tile.Ore_End/22
+13.5=tile.Ore_End/28
+13.6=tile.Ore_End/34
+13.7=tile.Ore_End/40
+13.8=tile.Ore_End/46
+13.9=tile.Ore_End/52
+13.10=tile.Ore_End/58
+13.11=tile.Ore_End/64
+13.12=tile.Ore_End/70
+13.13=tile.Ore_End/76
+
+13.2=tile.Ore_Nether/10
+13.3=tile.Ore_Nether/16
+13.4=tile.Ore_Nether/22
+13.5=tile.Ore_Nether/28
+13.6=tile.Ore_Nether/34
+13.7=tile.Ore_Nether/40
+13.8=tile.Ore_Nether/46
+13.9=tile.Ore_Nether/52
+13.10=tile.Ore_Nether/58
+13.11=tile.Ore_Nether/64
+13.12=tile.Ore_Nether/70
+13.13=tile.Ore_Nether/76
+
+13.2=tile.Ore_Stone/10
+13.3=tile.Ore_Stone/16
+13.4=tile.Ore_Stone/22
+13.5=tile.Ore_Stone/28
+13.6=tile.Ore_Stone/34
+13.7=tile.Ore_Stone/40
+13.8=tile.Ore_Stone/46
+13.9=tile.Ore_Stone/52
+13.10=tile.Ore_Stone/58
+13.11=tile.Ore_Stone/64
+13.12=tile.Ore_Stone/70
+13.13=tile.Ore_Stone/76
+
+14.2=tile.Ore_End/11
+14.3=tile.Ore_End/17
+14.4=tile.Ore_End/23
+14.5=tile.Ore_End/29
+14.6=tile.Ore_End/35
+14.7=tile.Ore_End/41
+14.8=tile.Ore_End/47
+14.9=tile.Ore_End/53
+14.10=tile.Ore_End/59
+14.11=tile.Ore_End/65
+14.12=tile.Ore_End/71
+14.13=tile.Ore_End/77
+
+14.2=tile.Ore_Nether/11
+14.3=tile.Ore_Nether/17
+14.4=tile.Ore_Nether/23
+14.5=tile.Ore_Nether/29
+14.6=tile.Ore_Nether/35
+14.7=tile.Ore_Nether/41
+14.8=tile.Ore_Nether/47
+14.9=tile.Ore_Nether/53
+14.10=tile.Ore_Nether/59
+14.11=tile.Ore_Nether/65
+14.12=tile.Ore_Nether/71
+14.13=tile.Ore_Nether/77
+
+14.2=tile.Ore_Stone/11
+14.3=tile.Ore_Stone/17
+14.4=tile.Ore_Stone/23
+14.5=tile.Ore_Stone/29
+14.6=tile.Ore_Stone/35
+14.7=tile.Ore_Stone/41
+14.8=tile.Ore_Stone/47
+14.9=tile.Ore_Stone/53
+14.10=tile.Ore_Stone/59
+14.11=tile.Ore_Stone/65
+14.12=tile.Ore_Stone/71
+14.13=tile.Ore_Stone/77
 
 15.1=tile.BlockMetaID_Block/40
 15.2=tile.BlockMetaID_Block/41
