--- a/powercrystals/powerconverters/textures/terrain_0.config
+++ b/powercrystals/powerconverters/textures/terrain_0.config
@@ -1,52 +1,76 @@
-output=/textures/blocks/powercrystals/powerconverters/
+output=/textures/blocks/powercrystals/minefactoryreloaded/
 
-1.1=tile.powerconverters.bc.consumer.off
-1.2=tile.powerconverters.bc.consumer.on
-1.3=tile.powerconverters.bc.producer.off
-1.4=tile.powerconverters.bc.producer.on
-1.5=#
-1.6=tile.powerconverters.common.bridge
-1.7=tile.powerconverters.ic2.lv.consumer.off
-1.8=tile.powerconverters.ic2.lv.consumer.on
-1.9=tile.powerconverters.ic2.lv.producer.off
-1.10=tile.powerconverters.ic2.lv.producer.on
-1.11=tile.powerconverters.ic2.mv.consumer.off
-1.12=tile.powerconverters.ic2.mv.consumer.on
-1.13=tile.powerconverters.ic2.mv.producer.off
-1.14=tile.powerconverters.ic2.mv.producer.on
-1.15=tile.powerconverters.ic2.hv.consumer.off
-1.16=tile.powerconverters.ic2.hv.consumer.on
+1.1=#
+1.2=tile.mfr.conveyor.stopped.default
+1.3=#
+1.4=tile.mfr.rubberwood.sapling
+1.5=tile.mfr.rubberwood.log.side
+1.6=tile.mfr.rubberwood.log.top
+1.7=tile.mfr.rubberwood.leaves.transparent
+1.8=tile.mfr.rubberwood.leaves.opaque
+1.9=tile.mfr.rail.cargo.dropoff
+1.10=tile.mfr.rail.cargo.pickup
+1.11=tile.mfr.rail.passenger.dropoff
+1.12=tile.mfr.rail.passenger.pickup
+1.13=tile.mfr.road
+1.14=tile.mfr.road.light.off
+1.15=tile.mfr.road.light.on
 
-2.1=tile.powerconverters.ic2.hv.producer.off
-2.2=tile.powerconverters.ic2.hv.producer.on
-2.3=tile.powerconverters.ic2.ev.consumer.off
-2.4=tile.powerconverters.ic2.ev.consumer.on
-2.5=tile.powerconverters.ic2.ev.producer.off
-2.6=tile.powerconverters.ic2.ev.producer.on
-2.7=tile.powerconverters.steam.consumer.off
-2.8=tile.powerconverters.steam.consumer.on
-2.9=tile.powerconverters.steam.producer.off
-2.10=tile.powerconverters.steam.producer.on
-2.11=tile.powerconverters.ue.lv.consumer.off
-2.12=tile.powerconverters.ue.lv.consumer.on
-2.13=tile.powerconverters.ue.lv.producer.off
-2.14=tile.powerconverters.ue.lv.producer.on
-2.15=tile.powerconverters.ue.mv.consumer.off
-2.16=tile.powerconverters.ue.mv.consumer.on
+2.1=tile.mfr.stainedglass.white
+2.2=tile.mfr.stainedglass.orange
+2.3=tile.mfr.stainedglass.magenta
+2.4=tile.mfr.stainedglass.lightblue
+2.5=tile.mfr.stainedglass.yellow
+2.6=tile.mfr.stainedglass.lime
+2.7=tile.mfr.stainedglass.pink
+2.8=tile.mfr.stainedglass.gray
+2.9=tile.mfr.stainedglass.lightgray
+2.10=tile.mfr.stainedglass.cyan
+2.11=tile.mfr.stainedglass.purple
+2.12=tile.mfr.stainedglass.blue
+2.13=tile.mfr.stainedglass.brown
+2.14=tile.mfr.stainedglass.green
+2.15=tile.mfr.stainedglass.red
+2.16=tile.mfr.stainedglass.black
 
-3.1=tile.powerconverters.ue.mv.producer.off
-3.2=tile.powerconverters.ue.mv.producer.on
-3.3=tile.powerconverters.ue.hv.consumer.off
-3.4=tile.powerconverters.ue.hv.consumer.on
-3.5=tile.powerconverters.ue.hv.producer.off
-3.6=tile.powerconverters.ue.hv.producer.on
-3.7=tile.powerconverters.common.charger.off
-3.8=tile.powerconverters.common.charger.on
-3.9=tile.powerconverters.fz.consumer.off
-3.10=tile.powerconverters.fz.consumer.on
-3.11=tile.powerconverters.fz.producer.off
-3.12=tile.powerconverters.fz.producer.on
-3.13=tile.powerconverters.ue.ev.consumer.off
-3.14=tile.powerconverters.ue.ev.consumer.on
-3.15=tile.powerconverters.ue.ev.producer.off
-3.16=tile.powerconverters.ue.ev.producer.on
+3.1=tile.mfr.stainedglass.pane.side.white
+3.2=tile.mfr.stainedglass.pane.side.orange
+3.3=tile.mfr.stainedglass.pane.side.magenta
+3.4=tile.mfr.stainedglass.pane.side.lightblue
+3.5=tile.mfr.stainedglass.pane.side.yellow
+3.6=tile.mfr.stainedglass.pane.side.lime
+3.7=tile.mfr.stainedglass.pane.side.pink
+3.8=tile.mfr.stainedglass.pane.side.gray
+3.9=tile.mfr.stainedglass.pane.side.lightgray
+3.10=tile.mfr.stainedglass.pane.side.cyan
+3.11=tile.mfr.stainedglass.pane.side.purple
+3.12=tile.mfr.stainedglass.pane.side.blue
+3.13=tile.mfr.stainedglass.pane.side.brown
+3.14=tile.mfr.stainedglass.pane.side.green
+3.15=tile.mfr.stainedglass.pane.side.red
+3.16=tile.mfr.stainedglass.pane.side.black
+
+
+4.1=tile.mfr.conveyor.stopped.white
+4.2=tile.mfr.conveyor.stopped.orange
+4.3=tile.mfr.conveyor.stopped.magenta
+4.4=tile.mfr.conveyor.stopped.lightblue
+4.5=tile.mfr.conveyor.stopped.yellow
+4.6=tile.mfr.conveyor.stopped.lime
+4.7=tile.mfr.conveyor.stopped.pink
+4.8=tile.mfr.conveyor.stopped.gray
+4.9=tile.mfr.conveyor.stopped.lightgray
+4.10=tile.mfr.conveyor.stopped.cyan
+4.11=tile.mfr.conveyor.stopped.purple
+4.12=tile.mfr.conveyor.stopped.blue
+4.13=tile.mfr.conveyor.stopped.brown
+4.14=tile.mfr.conveyor.stopped.green
+4.15=tile.mfr.conveyor.stopped.red
+4.16=tile.mfr.conveyor.stopped.black
+
+6.1=tile.mfr.decorativebrick.glowstone
+6.2=tile.mfr.decorativebrick.ice
+6.3=tile.mfr.decorativebrick.lapis
+6.4=tile.mfr.decorativebrick.obsidian
+6.5=tile.mfr.decorativebrick.pavedstone
+6.6=tile.mfr.decorativebrick.snow
