Typo fix: itemAdvancedJetPack

--- a/gravisuite/gravi_items.config
+++ b/gravisuite/gravi_items.config
@@ -13,7 +13,7 @@ output=/mods/gravisuite/textures/items/
 1.11=itemAdvancedLappack
 1.12=itemMagnetron
 1.13=itemVajraCore
-1.14=itemAdvandedJetpack
+1.14=itemAdvancedJetPack
 1.15=itemEngineBoost
  
 2.1=itemGraviToolHoe
